--- a/DataSummary.rnw
+++ b/DataSummary.rnw
@@ -287,7 +287,7 @@ The following observations were reported by area DFO Resource Management staff, 
 \begin{table}[ht]
 \centering
 \caption{Observed number-at-age of \fishName{} for nearshore samples from 
-\Sexpr{paste(range(yrsNearshore$Year), collapse=" to ")}
+\Sexpr{paste(range(yrsNearshore), collapse=" to ")}
 in the \regionName{} \regionType{} stock assessment region (SAR). 
 \plusGroup{}
 \legendNear{}} 
@@ -303,7 +303,7 @@ in the \regionName{} \regionType{} stock assessment region (SAR).
 \begin{table}[ht]
 \centering
 \caption{Observed proportion-at-age of \fishName{} for nearshore samples from 
-\Sexpr{paste(range(yrsNearshore$Year), collapse=" to ")}
+\Sexpr{paste(range(yrsNearshore), collapse=" to ")}
 in the \regionName{} \regionType{} stock assessment region (SAR). 
 \plusGroup{}
 \legendNear{}} 
@@ -319,7 +319,7 @@ in the \regionName{} \regionType{} stock assessment region (SAR).
 \begin{table}[ht]
 \centering
 \caption{Observed mean weight-at-age in grams (g) of \fishName{} for nearshore samples from
-\Sexpr{paste(range(yrsNearshore$Year), collapse=" to ")}
+\Sexpr{paste(range(yrsNearshore), collapse=" to ")}
 in the \regionName{} \regionType{} stock assessment region (SAR). 
 \plusGroup{}
 \legendNear{}} 
@@ -335,7 +335,7 @@ in the \regionName{} \regionType{} stock assessment region (SAR).
 \begin{table}[ht]
 \centering
 \caption{Observed mean length-at-age in millimetres (mm) of \fishName{} for nearshore samples from 
-\Sexpr{paste(range(yrsNearshore$Year), collapse=" to ")}
+\Sexpr{paste(range(yrsNearshore), collapse=" to ")}
 in the \regionName{} \regionType{} stock assessment region (SAR). 
 \plusGroup{}
 \legendNear{}} 
@@ -511,7 +511,7 @@ Missing weight- and length-at-age values (i.e., years with no biological samples
 \centering
 \includegraphics[width=\linewidth]{LengthAgeSample.pdf}
 \caption{Length-at-age in millimetres (mm) of \fishName{} from
-\Sexpr{paste(range(yrsNearshore$Year), collapse=" to ")}
+\Sexpr{paste(range(yrsNearshore), collapse=" to ")}
 in the \regionName{} \regionType{} stock assessment region (SAR) by sample type. 
 The outer edges of the boxes indicate the \nth{25} and \nth{75} percentiles, and the middle lines indicate the \nth{50} percentiles (i.e., medians).
 The whiskers extend to $1.5 \times \text{IQR}$, where IQR is the distance between the \nth{25} and \nth{75} percentiles, and dots indicate outliers.
@@ -525,7 +525,7 @@ The whiskers extend to $1.5 \times \text{IQR}$, where IQR is the distance betwee
 \centering
 \includegraphics[width=\linewidth]{LengthAgeSampleSA.pdf}
 \caption{Length-at-age in millimetres (mm) of \fishName{} from
-\Sexpr{paste(range(yrsNearshore$Year), collapse=" to ")}
+\Sexpr{paste(range(yrsNearshore), collapse=" to ")}
 in the \regionName{} \regionType{} stock assessment region (SAR) by sample type and statistical area (SA). 
 The outer edges of the boxes indicate the \nth{25} and \nth{75} percentiles, and the middle lines indicate the \nth{50} percentiles (i.e., medians).
 The whiskers extend to $1.5 \times \text{IQR}$, where IQR is the distance between the \nth{25} and \nth{75} percentiles, and dots indicate outliers.
