Add WCVI observations

--- a/RegionalText/2019/WCVI/GeneralObservations.tex
+++ b/RegionalText/2019/WCVI/GeneralObservations.tex
@@ -1,6 +1,10 @@
 \begin{itemize}
+\item Spawn activity seemed strong this year overall, though reduced from 2018.
 \item Compared to last year, the spatial extent of reported spawn was about the same.
 \item In Statistical Area 23, spawning activity was reported in the usual areas from Salmon Beach to Toquart Bay, with spawn also along the south side of Ucluelet.
+Most of the visible spawn in this are was in Stuart Bay, right by Ucluelet and Itatsoo.
 \item In Statistical Area 24, multiple spawns occurred from January to March, with the majority occurring in Hesquiaht Harbour.
 \item As with last year in Statistical Area 25, there was a noticeable increase in spawning activity in Nootka Sound, and multiple spawns around the Nuchatlitz islands.
+Nootka Sound was characterized by many small spot-spawns between the Villaverde Islands and Plumper Harbour.
+\item Satellite images helped identify three spawning events on days where there were no observation flights.
 \end{itemize}
