--- a/Document/Variables.rnw
+++ b/Document/Variables.rnw
@@ -48,7 +48,7 @@
 \newcommand{\legendNear}{Legend: `Nearshore' refers to samples collected using cast nets as part of a pilot study with First Nations.}
 \newcommand{\legendGear}{Legend: `Other' represents the reduction, the food and bait, as well as the special use fishery; `RoeSN' represents the roe seine fishery; and `RoeGN' represents the roe gillnet fishery.}
 \newcommand{\darkThisYr}{The year \thisYr{} has a darker bar to facilitate interpretation.}
-\newcommand{\withPrivacy}{Note: `WP' indicates that data are withheld due to privacy concerns.}
+\newcommand{\withPrivacy}[1]{Note: data may be withheld due to privacy concerns (#1).}
 \newcommand{\noSOK}{Data from the spawn-on-kelp (SOK) fishery is not included.}
 \newcommand{\spawnIndexTechReport}{See the \href{https://github.com/grinnellm/HerringSpawnDocumentation/blob/master/SpawnIndexTechnicalReport.pdf}{draft spawn index techincal report} for calculations to convert SOK harvest to spawning biomass.}
 \newcommand{\missingSpawn}[1]{Missing spawn index values (#1) indicate incomplete spawn surveys.}
