Update from meeting

--- a/RegionalText/2019/WCVI/GeneralObservations.tex
+++ b/RegionalText/2019/WCVI/GeneralObservations.tex
@@ -7,4 +7,6 @@ Most of the visible spawn in this are was in Stuart Bay, right by Ucluelet and I
 \item As with last year in Statistical Area 25, there was a noticeable increase in spawning activity in Nootka Sound, and multiple spawns around the Nuchatlitz islands.
 Nootka Sound was characterized by many small spot-spawns between the Villaverde Islands and Plumper Harbour.
 \item Satellite images helped identify three spawning events on days where there were no observation flights.
+\item Sporadic stop-start spawning behaviour in Barkley Sound.
+\item Ripe herring jigged in early April in Vernon Bay (Barkley Sound).
 \end{itemize}
