CC general observations

--- a/RegionalText/2020/CC/GeneralObservations.tex
+++ b/RegionalText/2020/CC/GeneralObservations.tex
@@ -1,3 +1,19 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+
+\item The SOK fishery was cancelled, but FSC did proceed.
+
+\item Overall it seemed like a better spawn year than last year.
+
+\item Spawn quality in several areas was very good, and was similar to last year.
+For example, divers reported over a dozen layers and spawn at depths beyond where the divers could go.
+A diver reported that the Thompson Bay area had the heaviest spawn on macro that he has ever seen.
+
+\item There was spawn in areas that had not spawned much or at all in recent years, such as Stryker Bay, Thompson Bay, and Weeteeum Bay.
+
+\item Some areas did not receive a lot of spawn like they did last year (e.g., Norman Morison Bay).
+
+\item The fish seemed to hold a long time and were not in a hurry to spawn.
+
+\item There was a little more wildlife activity than last season although nothing major.
+
 \end{itemize}
