WCVI and A27 observations

--- a/RegionalText/2020/WCVI/GeneralObservations.tex
+++ b/RegionalText/2020/WCVI/GeneralObservations.tex
@@ -1,3 +1,8 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+
+\item First Nations herring survey staff are able to inform local First Nations of opportunities to place boughs in active spawn areas.
+
+\item Many of the other 2020 WCVI herring spawn events were detected during the 13 reconnaissance flights carried out from February \nth{24} to March \nth{29} in 2020.
+Spawn location information was relayed between First Nations herring charter leaders, reconnaissance flight staff, test-vessel and dive-vessel skippers, to DFO land-based staff during flights to ensure best coverage and recording of spawn areas.
+
 \end{itemize}
