--- a/RegionalText/2020/A27/GeneralObservations.tex
+++ b/RegionalText/2020/A27/GeneralObservations.tex
@@ -1,3 +1,12 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+
+\item There was no commercial Spawn-on-kelp activity in 2020 in Area 27.
+Licence holders did not set up and no harvest took place in 2020.
+
+\item The spawn reconnaissance flight path does not typically include observations of Area 27.
+
+\item A herring spawn was reported to DFO by Winter Harbour residents on March 1.
+No dive survey personnel were able to attend and survey this spawn within the necessary time period.
+No other dive surveys were carried out in Area 27 during the 2020 herring season.
+
 \end{itemize}
