HG and A2W observations

--- a/RegionalText/2020/A2W/GeneralObservations.tex
+++ b/RegionalText/2020/A2W/GeneralObservations.tex
@@ -1,3 +1,8 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+
+\item Spawn seemed to start and stop over a longer period of time than in past years.
+
+\item This year had the first commercial SOK fishery since 2014.
+This presence provided useful information on when to start the 6 day spawn assessment charter.
+
 \end{itemize}
