--- a/RegionalText/2020/HG/GeneralObservations.tex
+++ b/RegionalText/2020/HG/GeneralObservations.tex
@@ -1,3 +1,22 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+
+\item The dive charter was cancelled due to COVID-19.
+Spawns were assessed using surface surveys and towed video cameras along transects.
+These towed video camera transects were effective for spawn assessments, and may be useful to supplement future dive surveys.
+
+\item Additional Haida Fisheries Program spawn reconnaisance effort helped support the efficiency of surface surveys.
+
+\item The largest concentration of fish and spawning was around Burnaby Island, and no spawns were observed in the Juan Perez area.
+
+\item Spawn for Skincuttle Island and Burnaby Island seemed about average. 
+
+\item Spawn from Section Cove to Scudder Island did not seem as intense as the past few years, but this year the fish spawned on multiple days on the same beach.
+
+\item Fish seemed smaller this year, and seemed to have less variation in length frequency.
+Some samples appeared to have full stomachs.
+Most of the fish seemed to be fairly close to spawning.
+There were very few juvenile fish this year.
+
+\item Prevailing Northwest and Northeast winds kept water temperature between 6.2 and 6.4^\circ\text{C}.
+
 \end{itemize}
