--- a/DataSummary.rnw
+++ b/DataSummary.rnw
@@ -122,7 +122,7 @@ We also show the percent change in weight and length for age-\Sexpr{ageShow} and
 {No spawn surveys were conducted in \thisYr{} in the \regionName{} \regionType{} SAR.}
 A summary of spawn from the last decade (\Sexpr{unique(spawnDecade$Decade)}) is shown in \autoref{figSpawnDecade}.
 \autoref{figSpawnTiming} shows spawn start date by decade and \Sexpr{ifelse(spawnTimingGroup, "Group", "Statistical Area")}.
-Spawn surveys are conducted to estimate the spawn length, width, number of egg layers, and substrate type, and these data are used to estimate the index of spawning biomass (i.e., the spawn index; \autoref{figSpawnIndexType}, \autoref{figSpawnDimensions}, \autoref{figSpawnIndexPercent}, \autoref{tabSpawnYrTab}, and \autoref{figSpawnIndexChange}).
+Spawn surveys are conducted to estimate the spawn length, width, number of egg layers, and substrate type, and these data are used to estimate the index of spawning biomass (i.e., the spawn index; \autoref{figSpawnIndexType}, \autoref{figSpawnTypeProp}, \autoref{figSpawnDimensions}, \autoref{figSpawnIndexPercent}, \autoref{tabSpawnYrTab}, and \autoref{figSpawnIndexChange}).
 We describe the calculations used to estimate the spawn index in the \href{https://github.com/grinnellm/HerringSpawnDocumentation/blob/master/SpawnIndexTechnicalReport.pdf}{draft spawn index techincal report}.
 \iftoggle{spawnDepth}{In addition, spawn surveys estimate spawn depth by Statistical Area, and Section (\autoref{figSpawnDepth}).}{\unskip}
 \spawnIndex{}
@@ -615,6 +615,14 @@ Note that spawn size and intensity varies; therefore the number of spawns is not
 \spawnTypes{}
 \qPeriods{}}
 \label{figSpawnIndexType}
+\end{figure}
+
+\begin{figure}[ht]
+\centering
+\includegraphics[width=\linewidth]{SpawnTypeProp.pdf}
+\caption{Time series of proportion of spawn index by surface and dive surveys for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+\qPeriods{}}
+\label{figSpawnTypeProp}
 \end{figure}
 
 \begin{figure}[ht]
