--- a/DataSummary.rnw
+++ b/DataSummary.rnw
@@ -426,10 +426,10 @@ Units: metres (m), and metric tonnes (t).}
 \centering
 \includegraphics[width=\linewidth]{BC.png}
 \caption{Boundaries for the \fishName{} stock assessment regions (SARs) in British Columbia.
-There are \Sexpr{length(allRegions$major)} major SARs:
-\Sexpr{PasteNicely(allRegions$major)}.
-There are \Sexpr{length(allRegions$minor)} minor SARs:
-\Sexpr{PasteNicely(allRegions$minor)}.
+There are \Sexpr{length(allRegionsLong$major)} major SARs:
+\Sexpr{PasteNicely(allRegionsLong$major)}.
+There are \Sexpr{length(allRegionsLong$minor)} minor SARs:
+\Sexpr{PasteNicely(allRegionsLong$minor)}.
 Units: kilometres (km).}
 \label{figBC}
 \end{figure}
@@ -689,7 +689,7 @@ Note that depth is not corrected to the chart datum.
 
 \begin{figure}[ht]
 \centering
-\animategraphics[width=\linewidth]{1}{\Sexpr{rPath}SpawnIndexAnimation}{1}{}
+% \animategraphics[width=\linewidth]{1}{\Sexpr{rPath}SpawnIndexAnimation}{1}{}
 \caption{Animation of \fishName{} spawn survey locations and spawn index in metric tonnes (t) from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR; thick dashed lines), and associated Section\Sexpr{ifelse(length(unique(areas$Section))>1, "s", "")} (Sec; thin solid lines).
 \qPeriods{}
 \spawnIndex{}
