Add SoG observations

--- a/RegionalText/2020/SoG/GeneralObservations.tex
+++ b/RegionalText/2020/SoG/GeneralObservations.tex
@@ -1,3 +1,17 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+
+\item Spawn in the Strait of Georgia was observed along most of the East coast of Vancouver Island from Shelter Point to Neck Point, and along the East side of Denman and Hornby Islands.
+
+\item Additional spawn was reported in Areas 15, 16, and 18.
+Spawn was also reported in Area 17 south (Mudge Island, Cedar, and Yellow Point), a change from an absence in these areas in recent years.
+
+\item Overall spawn and fishery timing was average in 2020, with the exception of a late spawn in Sechelt Inlet.
+
+\item Most of the Strait of Georgia spawn was between Qualicum Bay and Cape Lazo, along the West side of Denman Island.
+As with recent years, some late spawn was observed around Hornby and Denman Islands with the addition of extensive spawn between Blunden Point and Icarus Point near Nanaimo.
+
+\item The overall length of spawn observed during the flight program was average when compared with recent years, however a fewer number of flights were conducted.
+
+\item The Strait of Georgia sea lion population during the herring season continues to grow, and impacts the ability to obtain biological samples in some areas and times.
+
 \end{itemize}
